--- a/dictionary/.eslintrc.json
+++ b/dictionary/.eslintrc.json
@@ -21,7 +21,8 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-unused-expressions": "error",
     "@typescript-eslint/keyword-spacing": "error",
-    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/explicit-function-return-type": ["warn",{
+      "allowTypedFunctionExpressions": true }],
     "@typescript-eslint/explicit-module-boundary-types": "error",
     "@typescript-eslint/no-explicit-any": [
       "error",
