--- a/dictionary/.eslintrc.json
+++ b/dictionary/.eslintrc.json
@@ -23,7 +23,7 @@
     "@typescript-eslint/keyword-spacing": "error",
     "@typescript-eslint/explicit-function-return-type": ["warn",{
       "allowTypedFunctionExpressions": true }],
-    "@typescript-eslint/explicit-module-boundary-types": "error",
+    "@typescript-eslint/explicit-module-boundary-types": "warn",
     "@typescript-eslint/no-explicit-any": [
       "error",
       { "ignoreRestArgs": false }
